# moos-ivp-uav-base

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  build.sh
.github/workflows/: build_extend.yml
GazeboSim/worlds/: SkywalkerX8_swarm2.world
missions/UAV_Fly/: clean.sh  fire_mission_score_17411097094.txt  fires_01.txt  fires_02.txt  fires_c12_sep150.000000.txt  fires_c12_sep150.txt  fires_c6_sep600.txt  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  missionConfig.yaml  plug_origin_warp.moos  plug_pArduBridge.moos  plugs.moos  vpositions.txt
missions/UAV_Fly_Basic/: downsampled_grid.txt  fires_02.txt  fires_field.txt  launch_shoreside.sh  meta_shoreside.moos  missionConfig.yaml
missions/UAV_Fly_Refuel/: Montreal.info  downsampled_grid.txt  fires_01.txt  fires_03.txt  ignoredRegions.txt  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  missionConfig.yaml  plug_pArduBridge.moos  plugs.moos
missions/alpha_ufld/: launch.sh
missions/alpha_ufld_uav/: launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plugs.moos
missions/boat_plane_coordination/: HortenMapping.info  clean.sh  formula2boat.bhv  formula2boat.moos  launch.sh  launch_shoreside.sh  launch_uav.sh  launch_vehicle.sh  missionConfig.yaml  obstacles.txt  shoreside.moos  uav.bhv  uav.moos  uav_plugs.moos
missions/m2_berta_uav/: launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plugs.moos
missions/s1_alpha/: README.md  launch_shoreside.sh  launch_vehicle.sh  meta_vehicle.moos
scripts/: .bash_aliases_moos.sh  TEMP.txt  alog_extract_telemetry_csv.sh  configfileHelperFunctions.sh  download_map.sh  gdb_attach_arduplane.sh  generate_drone_sdf.py  mav.parm  merge_compile_commands.sh  plot_telemetry_csv.py  setup_bash_aliases_moos.sh  start_simulation.sh  valuePlotter.py
src/: CMakeLists.txt
src/app_voiview/: CMakeLists.txt  VOI_GUI.cpp  VOI_GUI.h  VOI_Viewer.cpp  VOI_Viewer.h  main.cpp
src/lib_behaviors/: BHV_ConstantAltitude.cpp  BHV_ConstantAltitude.h  BHV_Voronoi_uav.cpp  BHV_Voronoi_uav.h  CMakeLists.txt
src/lib_behaviors-test/: BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/lib_bhv_task_refuel_replace/: BHV_TaskRefuelReplace.cpp  BHV_TaskRefuelReplace.h  CMakeLists.txt
src/lib_bhv_task_refuel_replace_basic/: BHV_TaskRefuelReplaceBasic.cpp  BHV_TaskRefuelReplaceBasic.h  CMakeLists.txt  README
src/lib_bhv_task_refuel_replace_target/: BHV_TaskRefuelReplaceTarget.cpp  BHV_TaskRefuelReplaceTarget.h  CMakeLists.txt
src/lib_common/: CMakeLists.txt  Logger.h  common.h
src/lib_fires/: CMakeLists.txt  Fire.cpp  Fire.h  FireFldGenerator.cpp  FireFldGenerator.h  FireMissionScorer.cpp  FireMissionScorer.h  FireScoreExample.cpp  FireSet.cpp  FireSet.h
src/lib_ignoredRegions/: CMakeLists.txt  IgnoredRegion.cpp  IgnoredRegion.h  IgnoredRegionGenerator.cpp  IgnoredRegionGenerator.h  IgnoredRegionSet.cpp  IgnoredRegionSet.h
src/lib_local_auction_reservation/: CMakeLists.txt  LocalAuctionReservation.cpp  LocalAuctionReservation.h  README.md
src/lib_refuel_bid_reservation/: CMakeLists.txt  RefuelBidReservation.cpp  RefuelBidReservation.h
src/lib_tmstc_star/: CMakeLists.txt  README.md  downsampled_grid.txt  example_main.cpp  example_map.txt  main.cpp
src/lib_tmstc_star/include/: ACO_STC.h  ConnectComponent.h  DARPPlanner.h  Dinic.h  HeuristicPartition.h  MaximumSubRectDivision.h  PathCut.h  STC.h  TMSTCStar.h  TMSTCVisualization.h  m_TSP.h
src/lib_tmstc_star/src/: Dinic.cpp  MapToMatrix.cpp  MaximumSubRectDivision.cpp  PathCut.cpp  TMSTCStar.cpp  TMSTCVisualization.cpp  m_TSP.cpp
src/pArduBridge/: ArduBridge.cpp  ArduBridge.h  ArduBridge_Info.cpp  ArduBridge_Info.h  CMakeLists.txt  Logger.h  ModeConfirmationTracker.h  RtlConfirmationTracker.h  SetpointManager.h  TakeoffConfirmationTracker.h  ThreadSafeVariable.h  UAV_Model.cpp  UAV_Model.h  WarningSystem.h  definitions.h  main.cpp  mavlinkDefinitionsArdupilot.h
src/pArduBridge/tests/: ModeConfirmationTrackerTest.cpp  RtlConfirmationTrackerTest.cpp  UAVPolicyTest.cpp
src/pBoatTracker/: BoatTracker.cpp  BoatTracker.h  BoatTracker_Info.cpp  BoatTracker_Info.h  CMakeLists.txt  main.cpp
src/pGenRescue/: CMakeLists.txt  GenRescue.cpp  GenRescue.h  GenRescue_Info.cpp  GenRescue_Info.h  main.cpp  mavlink_helper.cpp  pGenRescue.moos
src/pGridSearchPlanner/: CMakeLists.txt  GridSearchPlanner.cpp  GridSearchPlanner.h  GridSearchPlanner_Info.cpp  GridSearchPlanner_Info.h  TMSTCGridConverter.cpp  TMSTCGridConverter.h  main.cpp  pGridSearchPlanner.moos
src/pGridSearchViz/: CMakeLists.txt  GridSearchViz.cpp  GridSearchViz.h  GridSearchViz_Info.cpp  GridSearchViz_Info.h  TMSTCGridConverter.h  main.cpp  pGridSearchViz.moos
src/pMissionOperator/: CMakeLists.txt  MissionOperator.cpp  MissionOperator.h  MissionOperator_Info.cpp  MissionOperator_Info.h  main.cpp  pMissionOperator.moos
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pProxonoi_uav/: CMakeLists.txt  Proxonoi.cpp  Proxonoi.h  Proxonoi_Info.cpp  Proxonoi_Info.h  main.cpp
src/pRefuelReplace/: CMakeLists.txt  README.md  RefuelReplace.cpp  RefuelReplace.h  RefuelReplace_Info.cpp  RefuelReplace_Info.h  main.cpp
src/uFldFireSim/: CMakeLists.txt  FireSim.cpp  FireSim.h  FireSim_Info.cpp  FireSim_Info.h  main.cpp  uFldFireSim.moos
tiles/: Montreal.info
wiki/: ArduPilot & MavProx.md  ArduPilot_&_MavProx.md  Gazebo Plugin Configuration.md  Gazebo.md  Gazebo_Plugin_Configuration.md  Installation and Setup.md  Installation_&_Setup.md  MAIN System architecture.md  MAVSDK Setup and Usage.md  MAVSDK_Setup_&_Usage.md  README.md  Raspberry_Pi_MOOS-IvP_Setup.md  System_Launch_Guide.md  Troubleshooting.md  UAV_Mission_ARDU_Commands.md  UAV_Mission_Configuration.md  UAV_Mission_GCS_Commands.md  UAV_Mission_Launch_Scripts.md  ardupilot_gazebo plugin.md
(+118 files in other folders)
